[package]
name = "logos-inspector"
version = "0.1.0"
edition = "2021"
description = "CLI tool to inspect Logos blockchain state"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "2"
anyhow = "1"
